# servant-ms-proto

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  cabal.project  readme.md  start_mongo.sh
ms-framework/: CHANGELOG.md  ms-framework.cabal  readme.md
ms-framework/app/MSFramework/: Arguments.hs  Data.hs  Logger.hs  Middleware.hs  MongoUtil.hs  Servant.hs  Types.hs  Util.hs  Validator.hs
user-client/: CHANGELOG.md  readme.md  user-client.cabal
user-client/app/: Main.hs
user-ms/: CHANGELOG.md  readme.md  user-ms.cabal
user-ms/app/: Main.hs
user-ms/app/UserService/: Client.hs  Handlers.hs  Persistence.hs  Security.hs  Server.hs  Types.hs
