cabal-version:      2.4
name:               ms-framework
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A micro-service framework.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Darrell Roberts

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: MSFramework.Logger
                     MSFramework.Middleware
                     MSFramework.Types
                     MSFramework.Servant
                     MSFramework.Util
                     MSFramework.MongoUtil
                     MSFramework.Validator

    build-depends:    base ^>=4.14.3.0
                      , servant-server
                      , aeson
                      , text
                      , wai
                      , warp
                      , mongoDB
                      , bytestring
                      , mtl
                      , time
                      , vault
                      , fast-logger
                      , uuid
                      , http-types
                      , unliftio
                      , validation-selective
                      , resource-pool
                      , monad-control
                      , conduit
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -Wunused-packages
    default-extensions: ImportQualifiedPost
                        UnicodeSyntax
                        OverloadedStrings
                        NamedFieldPuns
                        LambdaCase
                        DuplicateRecordFields
                        FlexibleContexts
                        RankNTypes
